# cQUIC-invariants

./: CMakeLists.txt  README.md
src/: config.h  error.h  invariants.h
src/invariants/: longpkt.cpp  longpkt.h  packet.cpp  packet.h  shortpkt.cpp  shortpkt.h  vernegopkt.cpp  vernegopkt.h
src/utils/: utils.h
test/: test_invariants.cpp
